--- a/styles/architect.css
+++ b/styles/architect.css
@@ -21,6 +21,12 @@
     border: 0;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -31,12 +37,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
 }
 
 nav>ul {
@@ -111,8 +111,95 @@ main {
     font-weight: 700;
 }
 
+/* features section styles */
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
 
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
 
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-img img {
+    height: 90%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    text-align: center;
+    border-radius: 8px;
+    position: relative;
+    bottom: 100px;
+    background: #FF900E;
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.5rem;
+
+}
+
+/* facts section */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/* Sponsors styles */
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsors-img-container img {
+    width: 165px;
+}
 
 /* responsive media query */
 /* mobile deices */
@@ -122,17 +209,35 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .features,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
+    }
+
+    .feature-img img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge {
+        position: static;
+        max-width: 300px;
     }
 
     .temas-img-container {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .teams-content,
+    .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
     }
 }
 
@@ -143,7 +248,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .features,
+    .teams-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
