--- a/styles/architect.css
+++ b/styles/architect.css
@@ -201,6 +201,21 @@ main {
     width: 165px;
 }
 
+/* footer */
+.footer {
+    border-radius: 8px;
+    padding: 10px;
+    background: #FFF4E7;
+}
+
+.footer-description {
+    color: #424242;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+
+}
+
 /* responsive media query */
 /* mobile deices */
 @media screen and (max-width: 576px) {
